# Wireframe-3d-Renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  point.cpp  point.h
src/: Triangle.h  main.cpp  point.cpp  point.h  vectorMath.h
